--- a/css/styles.css
+++ b/css/styles.css
@@ -159,8 +159,8 @@ select, input[type="text"] {
 .screen {
     display: none;
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100dvh;
+    height: 100dvh;
     left: 0;
     top: 0;
     opacity: 0;
@@ -180,6 +180,7 @@ select, input[type="text"] {
 /* Start Screen and common screen styles */
 #start-screen,
 #player-count-screen,
+#role-selection-screen,
 #turn-order-screen,
 #end-game-screen {
     background-image: url('../assets/Critocracy.jpg');
@@ -213,6 +214,7 @@ select, input[type="text"] {
 }
 
 /* Player count and role selection screens */
+/* Player count and role selection screens */
 #player-count-screen h2, 
 #role-selection-screen h2, 
 #turn-order-screen h2 {
@@ -227,16 +229,17 @@ select, input[type="text"] {
     grid-template-rows: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
     width: 100%;
-    max-width: 1200px;
+    max-width: 100dvh;
+    max-height: 100dvh;
     margin: 20px auto;
     padding: 0 20px;
 }
 
 .grid-item {
-    border: 1px solid #ddd;
+    border: 2px solid #000000;
     border-radius: 8px;
     padding: 15px;
-    background-color: rgb(162, 195, 181);
+    background-color: rgba(162, 195, 181, 0.418);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s, box-shadow 0.3s;
     display: flex;
