--- a/css/styles.css
+++ b/css/styles.css
@@ -214,11 +214,10 @@ select, input[type="text"] {
 }
 
 /* Player count and role selection screens */
-/* Player count and role selection screens */
 #player-count-screen h2, 
 #role-selection-screen h2, 
 #turn-order-screen h2 {
-    color: #fff;
+    color: #003017;
     margin-bottom: 20px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
@@ -229,7 +228,7 @@ select, input[type="text"] {
     grid-template-rows: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
     width: 100%;
-    max-width: 100dvh;
+    max-width: 100%;
     max-height: 100dvh;
     margin: 20px auto;
     padding: 0 20px;
@@ -260,7 +259,7 @@ select, input[type="text"] {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
-.card-body {
+.role-card-body {
     flex: 1;
     display: flex;
     flex-direction: row;
@@ -268,23 +267,23 @@ select, input[type="text"] {
     align-items: center;
 }
 
-.card-text {
+.role-card-text {
     flex: 1;
     padding-right: 10px;
 }
 
-.card-text p {
+.role-card-text p {
     margin: 5px 0;
     font-size: 0.9rem;
     color: #013b25;
 }
 
-.card-text strong {
+.role-card-text strong {
     color: #123b25;
     font-weight: 600;
 }
 
-.card-image, .token-image {
+.role-card-image, .token-image {
     text-align: right;
     flex-shrink: 0;
     margin-left: 10px;
