--- a/css/styles.css
+++ b/css/styles.css
@@ -109,11 +109,11 @@ body {
 }
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 .visible {
-    display: block;
+    display: block !important;
 }
 
 /* Button styles */
@@ -159,7 +159,7 @@ select, input[type="text"] {
 .screen {
     display: none;
     position: absolute;
-    width: 100dvh;
+    width: 100%;
     height: 100dvh;
     left: 0;
     top: 0;
@@ -169,7 +169,7 @@ select, input[type="text"] {
 }
 
 .screen.active {
-    display: flex;
+    display: flex !important;
     opacity: 1;
     z-index: 10;
     flex-direction: column;
