--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@
 /* Base document sizing */
 html, body {
     width: 100%;
-    height: 100%;
+    height: 100dvh;
     margin: 0;
     padding: 0;
     overflow: auto;
@@ -34,7 +34,7 @@ html, body {
 
 body {
     max-width: 100%;
-    max-height: 100%;
+    max-height: 100dvh;
     overflow-x: hidden;
 }
 
@@ -169,7 +169,7 @@ select, input[type="text"] {
 }
 
 .screen.active {
-    display: flex !important;
+    display: flex;
     opacity: 1;
     z-index: 10;
     flex-direction: column;
@@ -226,6 +226,7 @@ select, input[type="text"] {
 .grid-container {
     display: grid;
     grid-template-rows: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     width: 100%;
     max-width: 100%;
@@ -239,7 +240,7 @@ select, input[type="text"] {
     border: 2px solid #000000;
     border-radius: 8px;
     padding: 15px;
-    background-color: rgba(162, 195, 181, 0.418);
+    background-color: rgba(162, 195, 181, 0.726);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s, box-shadow 0.3s;
     display: flex;
