--- a/css/styles.css
+++ b/css/styles.css
@@ -225,7 +225,7 @@ select, input[type="text"] {
 /* Grid container for role selection */
 .grid-container {
     display: grid !important;
-    grid-auto-rows: minmax(250px, auto);
+    grid-template-rows: repeat(auto-fit, minmax 250px, 1fr);
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     width: 100%;
@@ -293,7 +293,7 @@ select, input[type="text"] {
 }
 
 .role-card-footer, .card-footer {
-    display: absolute;
+    display: fixed;
     justify-content: center;
     margin-top: 10px;
 }
