--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ select, input[type="text"] {
 
 /* Screen base styles */
 .screen {
-    display: none;
+    display: flex;
     position: absolute;
     width: 100%;
     height: 100dvh;
