--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ select, input[type="text"] {
 
 /* Screen base styles */
 .screen {
-    display: flex;
+    display: none;
     position: absolute;
     width: 100%;
     height: 100dvh;
@@ -169,7 +169,7 @@ select, input[type="text"] {
 }
 
 .screen.active {
-    display: flex;
+    display: flex !important;
     opacity: 1;
     z-index: 10;
     flex-direction: column;
